[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Bling"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Django = "^4.0.4"
Flask = "^2.1.1"
urllib3 = "^1.26.9"
cmd2 = "^2.4.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
